examples/acme/policynodes/pod-backend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo
  namespace: backend
spec:
  containers:
  - name: demo
    image: gcr.io/mdruskin-gketest1/demo:latest
    ports:
    - containerPort: 80
    imagePullPolicy: Always
