examples/acme/policynodes/acme.yaml
# Example for clusterroles
apiVersion: "stolos.dev/v1"
kind: ClusterPolicy
metadata:
  name: clusterpolicy
spec:
  policies:
    type: clusterrole
    clusterRolesV1:
    - kind: ClusterRole
      apiVersion: rbac.authorization.k8s.io/v1
      metadata:
        name: namespace-viewer
      rules:
      - apiGroups: [""]
        resources: ["namespaces"]
        verbs: ["get", "list"]
    - kind: ClusterRole
      apiVersion: rbac.authorization.k8s.io/v1
      metadata:
        name: rbac-viewer
      rules:
      - apiGroups: ["rbac.authorization.k8s.io"]
        resources: ["roles", "rolebindings", "clusterroles", "clusterrolebindings"]
        verbs: ["get", "list"]
    # Example for clusterrolebindings
    clusterRoleBindingsV1:
    - kind: ClusterRoleBinding
      apiVersion: rbac.authorization.k8s.io/v1
      metadata:
        name: namespace-viewers
      subjects:
      - kind: User
        name: cheryl@acme.com
        apiGroup: rbac.authorization.k8s.io
      - kind: User
        name: cyril@acme.com
        apiGroup: rbac.authorization.k8s.io
      roleRef:
        kind: ClusterRole
        name: namespace-viewer
        apiGroup: rbac.authorization.k8s.io
    - kind: ClusterRoleBinding
      apiVersion: rbac.authorization.k8s.io/v1
      metadata:
        name: rbac-viewers
      subjects:
      - kind: User
        name: cheryl@acme.com
        apiGroup: rbac.authorization.k8s.io
      roleRef:
        kind: ClusterRole
        name: rbac-viewer
        apiGroup: rbac.authorization.k8s.io
    # Example for podsecuirtypolicy
    podSecurityPolicyV1Beta1:
    - kind: PodSecurityPolicy
      apiVersion: extensions/v1beta1
      metadata:
        name: example
      spec:
        privileged: false
        seLinux:
          rule: RunAsAny
        supplementalGroups:
          rule: RunAsAny
        runAsUser:
          rule: RunAsAny
        fsGroup:
          rule: RunAsAny
        volumes:
        - '*'
